--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "client/build"
+        "distDir": "client/dist"
       }
     }
   ],
@@ -16,3 +16,4 @@
     }
   ]
 }
+
